--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndexbio-rest</artifactId>
 	<packaging>war</packaging>
-	<version>1.3-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>ndexbio-rest</name>
 	<url>http://maven.apache.org</url>
-    <inceptionYear>2013</inceptionYear>
+	<inceptionYear>2013</inceptionYear>
 	<repositories>
 		<repository>
 			<id>oss.sonatype.org</id>
@@ -26,44 +26,43 @@
 
 	<dependencies>
 
-<!--  
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
+			<groupId>org.ndexbio</groupId>
+			<artifactId>ndex-object-model</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1209.jre7</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>javax.servlet.jsp-api</artifactId>
-			<version>2.3.1</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1.1</version>
 		</dependency>
--->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.5.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.5.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.5.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-            <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>2.5.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.jaxrs</groupId>
-            <artifactId>jackson-jaxrs-base</artifactId>
-            <version>2.5.2</version>
-        </dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-json-provider</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-base</artifactId>
+			<version>2.8.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
@@ -101,71 +100,87 @@
 			<version>3.0</version>
 		</dependency>
 
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-server</artifactId>
-      <version>${jettyVersion}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-servlet</artifactId>
-      <version>${jettyVersion}</version>
-    </dependency>
-
-	<dependency>
-    	<groupId>org.eclipse.jetty</groupId>
-    	<artifactId>jetty-servlets</artifactId>
-    	<version>${jettyVersion}</version>
-	</dependency>
-<!-- 	
-	<dependency>
-		<groupId>org.opensaml</groupId>
-		<artifactId>opensaml</artifactId>
-		<version>2.6.1</version>
-	</dependency>
--->	
- 		<dependency>
-			<groupId>org.ndexbio</groupId>
-			<artifactId>ndex-common</artifactId>
-			<version>1.3-SNAPSHOT</version>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>${jettyVersion}</version>
 		</dependency>
-	
 
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>${jettyVersion}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlets</artifactId>
+			<version>${jettyVersion}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+
+		<dependency>
+ 			 <groupId>org.apache.solr</groupId>
+		 	<artifactId>solr-solrj</artifactId>
+ 		 	<version>5.4.1</version>
+		</dependency>
+		
+		<dependency>
+  			<groupId>com.fasterxml.uuid</groupId>
+  			<artifactId>java-uuid-generator</artifactId>
+  			<version>3.1.4</version>
+		</dependency>
+				<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
+		</dependency>
+		
 	</dependencies>
 
 
 
 	<build>
-	<pluginManagement>
-<plugins>
-    <!-- Ignore/Execute plugin execution -->
-    <plugin>
-        <groupId>org.eclipse.m2e</groupId>
-        <artifactId>lifecycle-mapping</artifactId>
-        <version>1.0.0</version>
-        <configuration>
-            <lifecycleMappingMetadata>
-                <pluginExecutions>
-                    <!-- copy-dependency plugin -->
-                    <pluginExecution>
-                        <pluginExecutionFilter>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-dependency-plugin</artifactId>
-                            <versionRange>[1.0.0,)</versionRange>
-                            <goals>
-                                <goal>copy-dependencies</goal>
-                            </goals>
-                        </pluginExecutionFilter>
-                        <action>
-                            <ignore />
-                        </action>
-                    </pluginExecution>
-                </pluginExecutions>
-            </lifecycleMappingMetadata>
-        </configuration>
-    </plugin>
-   </plugins></pluginManagement>
+		<pluginManagement>
+			<plugins>
+				<!-- Ignore/Execute plugin execution -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<!-- copy-dependency plugin -->
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[1.0.0,)</versionRange>
+										<goals>
+											<goal>copy-dependencies</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<finalName>ndexbio-rest</finalName>
 		<plugins>
 			<plugin>
@@ -177,175 +192,133 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			    <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>copy-dependencies</id>
-                    <phase>prepare-package</phase>
-                    <goals>
-                        <goal>copy-dependencies</goal>
-                    </goals>
-                    <configuration>
-                        <outputDirectory>/tmp/lib</outputDirectory>
-                        <overWriteReleases>false</overWriteReleases>
-                        <overWriteSnapshots>false</overWriteSnapshots>
-                        <overWriteIfNewer>true</overWriteIfNewer>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>2.6</version>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <addClasspath>true</addClasspath>
-                        <classpathPrefix>lib/</classpathPrefix>
-                        <mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
-            <executions>
-             <execution>
-				<id>make-a-jar</id>
-<phase>package</phase>
-<goals>
-<goal>jar</goal>
-</goals>
-</execution>
-</executions>
-        </plugin>
-<!-- 			 <plugin>
-      			<artifactId>maven-assembly-plugin</artifactId>
-      			<configuration>
-        			<archive>
-          				<manifest>
-            				<mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
-          				</manifest>
-        			</archive>
-        			<descriptorRefs>
-          				<descriptorRef>jar-with-dependencies</descriptorRef>
-        			</descriptorRefs>
-        			<finalName>ndexbio-rest</finalName>
-        			<appendAssemblyId>false</appendAssemblyId>
-      			</configuration>
-      			<executions>
-    				<execution>
-      					<id>make-assembly</id> 
-      					<phase>package</phase> 
-      					<goals>
-        					<goal>single</goal>
-      					</goals>
-    				</execution>
-  				</executions>
-    		</plugin> -->
-    		
-    		<!--  
-    		the plugin below can be used if we build executable standalone JettyServer 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>/tmp/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-a-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <configuration> 
+				<archive> <manifest> <mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass> 
+				</manifest> </archive> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
+				</descriptorRefs> <finalName>ndexbio-rest</finalName> <appendAssemblyId>false</appendAssemblyId> 
+				</configuration> <executions> <execution> <id>make-assembly</id> <phase>package</phase> 
+				<goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
 
-    		<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <finalName>shaded-jar</finalName>
-                    <transformers>
-                        <transformer
-                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                            <resource>META-INF/services/com.orientechnologies.orient.core.sql.functions.OSQLFunctionFactory</resource>
-                        </transformer>
-                        <transformer
-                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                            <resource>META-INF/services/com.orientechnologies.orient.core.sql.OCommandExecutorSQLFactory</resource>
-                        </transformer>
-                        <transformer   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>mapegy.orientdbcsv.OrientDBMain</mainClass>
-                        </transformer>
-                    </transformers>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
-            
-    		<plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.2.5.v20141112</version>
-            </plugin>
-              
-            <!-- the "maven-war-plugin" below generates the "ndexbio-rest-{project.artifactId}-${project.version}.jar" 
-                 in the ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib direcotry.  This jar will be used by 
-                 JUnit tests in ndex-java-client project.
-              -->  
-            <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-war-plugin</artifactId>
-               <version>2.6</version>
-               <configuration>
-                      <archiveClasses>true</archiveClasses>
-               </configuration>
-           </plugin>
-           
-              <!-- the "maven-install-plugin" copies the  "ndexbio-rest-{project.artifactId}-${project.version}.jar" file from
-                   ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib to ~/.m2/repository/org/ndexbio/ndexbio-rest/{project.artifactId}-${project.version}. 
-                -->
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-install-plugin</artifactId>
-               <version>2.5.2</version>
-               <executions>
-                   <execution>
-                       <phase>install</phase>
-                       <goals>
-                           <goal>install-file</goal>
-                       </goals>
-                       <configuration>
-                           <packaging>jar</packaging>
-                           <artifactId>${project.artifactId}</artifactId>
-                           <groupId>${project.groupId}</groupId>
-                           <version>${project.version}</version>
-                           <file>${project.build.directory}/ndexbio-rest/WEB-INF/lib/${project.artifactId}-${project.version}.jar</file>
-                       </configuration>
-                   </execution>
-               </executions>
-           </plugin>
-      <plugin>
-   <groupId>com.mycila</groupId>
-   <artifactId>license-maven-plugin</artifactId>
-   <version>2.6</version>
-   <configuration>
-      <header>${basedir}/misc/license_header.txt</header>
-      <properties>
-         <inceptionYear>${project.inceptionYear}</inceptionYear>
-         <year>${year}</year>
-      </properties>
-      <includes>
-         <include>src/**/*.java</include>
-         <include>src/**/*.xml</include>
-      </includes>
-      <excludes>
-         <exclude>**/logback.xml</exclude>
-         <exclude>**/logback-test.xml</exclude>
-         <exclude>**/src/test/resources/**</exclude>
-      </excludes>
-   </configuration>
-</plugin>
+			<!-- the plugin below can be used if we build executable standalone JettyServer 
+				<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
+				<version>2.3</version> <configuration> <finalName>shaded-jar</finalName> 
+				<transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> 
+				<resource>META-INF/services/com.orientechnologies.orient.core.sql.functions.OSQLFunctionFactory</resource> 
+				</transformer> <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> 
+				<resource>META-INF/services/com.orientechnologies.orient.core.sql.OCommandExecutorSQLFactory</resource> 
+				</transformer> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
+				<mainClass>mapegy.orientdbcsv.OrientDBMain</mainClass> </transformer> </transformers> 
+				</configuration> <executions> <execution> <phase>package</phase> <goals> 
+				<goal>shade</goal> </goals> </execution> </executions> </plugin> -->
+
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.5.v20141112</version>
+			</plugin>
+
+			<!-- the "maven-war-plugin" below generates the "ndexbio-rest-{project.artifactId}-${project.version}.jar" 
+				in the ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib direcotry. This jar 
+				will be used by JUnit tests in ndex-java-client project. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archiveClasses>true</archiveClasses>
+				</configuration>
+			</plugin>
+
+			<!-- the "maven-install-plugin" copies the "ndexbio-rest-{project.artifactId}-${project.version}.jar" 
+				file from ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib to ~/.m2/repository/org/ndexbio/ndexbio-rest/{project.artifactId}-${project.version}. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.2</version>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<packaging>jar</packaging>
+							<artifactId>${project.artifactId}</artifactId>
+							<groupId>${project.groupId}</groupId>
+							<version>${project.version}</version>
+							<file>${project.build.directory}/ndexbio-rest/WEB-INF/lib/${project.artifactId}-${project.version}.jar</file>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.mycila</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<header>${basedir}/misc/license_header.txt</header>
+					<properties>
+						<inceptionYear>${project.inceptionYear}</inceptionYear>
+						<year>${year}</year>
+					</properties>
+					<includes>
+						<include>src/**/*.java</include>
+						<include>src/**/*.xml</include>
+					</includes>
+					<excludes>
+						<exclude>**/logback.xml</exclude>
+						<exclude>**/logback-test.xml</exclude>
+						<exclude>**/src/test/resources/**</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
 	<properties>
-		<jettyVersion>9.3.3.v20150827</jettyVersion>
-		<resteasyVersion>3.0.13.Final</resteasyVersion>
+		<jettyVersion>9.3.11.v20160721</jettyVersion>
+		<resteasyVersion>3.0.18.Final</resteasyVersion>
 	</properties>
 </project>
