--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndexbio-rest</artifactId>
 	<packaging>war</packaging>
-	<version>2.4.3</version>
+	<version>2.4.4-SNAPSHOT</version>
 	<name>ndexbio-rest</name>
 	<url>http://maven.apache.org</url>
 	<inceptionYear>2013</inceptionYear>
 	<repositories>
-		
+
 	</repositories>
 
 	<dependencies>
@@ -101,7 +102,7 @@
 			<artifactId>jetty-servlets</artifactId>
 			<version>${jettyVersion}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -109,17 +110,17 @@
 		</dependency>
 
 		<dependency>
- 			 <groupId>org.apache.solr</groupId>
-		 	<artifactId>solr-solrj</artifactId>
- 		 	<version>8.1.1</version>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-solrj</artifactId>
+			<version>8.1.1</version>
 		</dependency>
-		
+
 		<dependency>
-  			<groupId>com.fasterxml.uuid</groupId>
-  			<artifactId>java-uuid-generator</artifactId>
-  			<version>3.2.0</version>
+			<groupId>com.fasterxml.uuid</groupId>
+			<artifactId>java-uuid-generator</artifactId>
+			<version>3.2.0</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>27.0.1-jre</version>
@@ -130,37 +131,37 @@
 			<version>4.3</version>
 		</dependency>
 		<dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>1.30.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.oauth-client</groupId>
-            <artifactId>google-oauth-client</artifactId>
-            <version>1.27.0</version>
-        </dependency>
-		
-		
-		  <dependency>
-      <groupId>org.apache.maven.scm</groupId>
-      <artifactId>maven-scm-provider-gitexe</artifactId>
-      <version>1.8.1</version>
-    </dependency>
-   <dependency>
-    <groupId>org.apache.maven.scm</groupId>
-    <artifactId>maven-scm-provider-git-commons</artifactId>
-    <version>1.8.1</version>
-   </dependency>       
-    
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.30.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client</artifactId>
+			<version>1.27.0</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.maven.scm</groupId>
+			<artifactId>maven-scm-provider-gitexe</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.scm</groupId>
+			<artifactId>maven-scm-provider-git-commons</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+
 	</dependencies>
- 
- <scm>
 
-	  <connection>scm:git:https://github.com/ndexbio/ndex-rest.git</connection>
+	<scm>
 
-	 </scm>
-	  
- 
+		<connection>scm:git:https://github.com/ndexbio/ndex-rest.git</connection>
+
+	</scm>
+
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -197,10 +198,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+				 <!--  	<release>11</release>  -->
+				    <source>1.8</source>
+					<target>1.8</target> 
 				</configuration>
 			</plugin>
 			<plugin>
@@ -232,12 +234,12 @@
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
 							<mainClass>org.ndexbio.rest.server.StandaloneServer</mainClass>
-			              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
-            <manifestEntries>
-               <NDEx-Version>${project.version}</NDEx-Version>
-	       	   <NDEx-Build>${buildNumber}</NDEx-Build>
-            </manifestEntries>
+						<manifestEntries>
+							<NDEx-Version>${project.version}</NDEx-Version>
+							<NDEx-Build>${buildNumber}</NDEx-Build>
+						</manifestEntries>
 					</archive>
 				</configuration>
 				<executions>
@@ -264,69 +266,66 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.2.3</version>
 				<configuration>
-				       <shortRevisionLength>5</shortRevisionLength>
+					<shortRevisionLength>5</shortRevisionLength>
 					<archiveClasses>true</archiveClasses>
-					 <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
-            <manifestEntries>
-               <NDEx-Version>${project.version}</NDEx-Version>
-	       	   <NDEx-Build>${buildNumber}</NDEx-Build>
-            </manifestEntries>
-          </archive>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<NDEx-Version>${project.version}</NDEx-Version>
+							<NDEx-Build>${buildNumber}</NDEx-Build>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
-     <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.3</version>
-        <executions>
-          <execution>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-        <revisiononscmfailure>
-	     <!--
-	      Generate sequence build number based on:
-	      build number and timestamp     
-	     -->
-	     <format>Build: #{0} ({1,date})</format>
-	     <items>
-	      <item>buildNumber\d*</item>
-	      <item>timestamp</item>
-	     </items>
-	    </revisiononscmfailure>
-                
-          <doCheck>false</doCheck>
-          <doUpdate>false</doUpdate>
-        </configuration>
-      </plugin>
-      
-      <plugin>
-    <groupId>io.github.michaldo</groupId>
-    <artifactId>nashorn-maven-plugin</artifactId>
-    <version>0.0.1</version>
-    <executions>
-        <execution>
-            <phase>validate</phase>
-            <goals>
-                <goal>eval</goal>
-            </goals>
-            <configuration>
-                <script>
-                    $project.artifact.version = "${buildNumber}";
-                </script>
-            </configuration>
-        </execution>
-    </executions>
-</plugin>
+	 		<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<revisiononscmfailure>
+						<!-- Generate sequence build number based on: build number and timestamp -->
+						<format>Build: #{0} ({1,date})</format>
+						<items>
+							<item>buildNumber\d*</item>
+							<item>timestamp</item>
+						</items>
+					</revisiononscmfailure>
+
+					<doCheck>false</doCheck>
+					<doUpdate>false</doUpdate>
+				</configuration>
+			</plugin>  
+
+	<!-- 	<plugin>  //Seems this is not used anywhere. Commenting out for now. Will remove it in next release. 
+				<groupId>io.github.michaldo</groupId>
+				<artifactId>nashorn-maven-plugin</artifactId>
+				<version>0.0.2</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>eval</goal>
+						</goals>
+						<configuration>
+							<script>
+								$project.artifact.version = "${buildNumber}";
+							</script>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>   -->	
 			<!-- the "maven-install-plugin" copies the "ndexbio-rest-{project.artifactId}-${project.version}.jar" 
 				file from ~/git/ndex-rest/target/ndexbio-rest/WEB-INF/lib to ~/.m2/repository/org/ndexbio/ndexbio-rest/{project.artifactId}-${project.version}. -->
 			<plugin>
@@ -376,8 +375,8 @@
 	<properties>
 		<jettyVersion>9.3.18.v20170406</jettyVersion>
 		<resteasyVersion>3.1.4.Final</resteasyVersion>
-	<!-- 	<log4jVersion>2.8.2</log4jVersion>  -->
+		<!-- <log4jVersion>2.8.2</log4jVersion> -->
 		<jacksonVersion>2.9.9</jacksonVersion>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
