--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,22 @@
 
 	<dependencies>
 		<dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2-jakarta</artifactId>
+            <version>${swaggerVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2-servlet-initializer-jakarta</artifactId>
+            <version>${swaggerVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations-jakarta</artifactId>
+            <version>${swaggerVersion}</version>
+        </dependency>
+
+		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>4.0.2</version>
@@ -91,6 +107,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.14.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jacksonVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -158,6 +179,16 @@
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>${resteasyVersion}</version>
 		</dependency>
+		
+		<!-- Enable this to expose resteasy/registry which lists all 
+             endpoints being served by resteasy. Also need to 
+             uncomment line in web.xml for this to work					
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-stats</artifactId>
+			<version>${resteasyVersion}</version>
+		</dependency>
+        -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -492,10 +523,11 @@
             </plugins>
         </reporting>
 	<properties>
+		<swaggerVersion>2.2.21</swaggerVersion>
 		<jettyVersion>11.0.20</jettyVersion>
 		<resteasyVersion>6.2.8.Final</resteasyVersion>
 		<!-- <log4jVersion>2.8.2</log4jVersion> -->
-		<jacksonVersion>2.14.3</jacksonVersion>
+		<jacksonVersion>2.17.1</jacksonVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 </project>
